// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`buildEsQuery should generate correct es query for {"timeRange":{"from":"2022-08-30T15:23:23.721Z","to":"2022-08-30T15:38:28.171Z"},"kuery":""} 1`] = `
Object {
  "bool": Object {
    "filter": Array [
      Object {
        "range": Object {
          "kibana.alert.time_range": Object {
            "format": "strict_date_optional_time",
            "gte": "2022-08-30T15:23:23.721Z",
            "lte": "2022-08-30T15:38:28.171Z",
          },
        },
      },
    ],
    "must": Array [],
    "must_not": Array [],
    "should": Array [],
  },
}
`;

exports[`buildEsQuery should generate correct es query for {"timeRange":{"from":"2022-08-30T15:23:23.721Z","to":"2022-08-30T15:38:28.171Z"},"kuery":"kibana.alert.status: \\"active\\""} 1`] = `
Object {
  "bool": Object {
    "filter": Array [
      Object {
        "bool": Object {
          "minimum_should_match": 1,
          "should": Array [
            Object {
              "match_phrase": Object {
                "kibana.alert.status": "active",
              },
            },
          ],
        },
      },
      Object {
        "range": Object {
          "kibana.alert.time_range": Object {
            "format": "strict_date_optional_time",
            "gte": "2022-08-30T15:23:23.721Z",
            "lte": "2022-08-30T15:38:28.171Z",
          },
        },
      },
    ],
    "must": Array [],
    "must_not": Array [],
    "should": Array [],
  },
}
`;

exports[`buildEsQuery should generate correct es query for {"timeRange":{"from":"2022-08-30T15:23:23.721Z","to":"2022-08-30T15:38:28.171Z"},"kuery":"kibana.alert.status: \\"recovered\\" and kibana.alert.duration.us >= 120","filters":[{"meta":{},"query":{"service.name":{"value":"synth-node-0"}}}]} 1`] = `
Object {
  "bool": Object {
    "filter": Array [
      Object {
        "bool": Object {
          "filter": Array [
            Object {
              "bool": Object {
                "minimum_should_match": 1,
                "should": Array [
                  Object {
                    "match_phrase": Object {
                      "kibana.alert.status": "recovered",
                    },
                  },
                ],
              },
            },
            Object {
              "bool": Object {
                "minimum_should_match": 1,
                "should": Array [
                  Object {
                    "range": Object {
                      "kibana.alert.duration.us": Object {
                        "gte": "120",
                      },
                    },
                  },
                ],
              },
            },
          ],
        },
      },
      Object {
        "range": Object {
          "kibana.alert.time_range": Object {
            "format": "strict_date_optional_time",
            "gte": "2022-08-30T15:23:23.721Z",
            "lte": "2022-08-30T15:38:28.171Z",
          },
        },
      },
      Object {
        "service.name": Object {
          "value": "synth-node-0",
        },
      },
    ],
    "must": Array [],
    "must_not": Array [],
    "should": Array [],
  },
}
`;

exports[`buildEsQuery should generate correct es query for {"timeRange":{"from":"2022-08-30T15:23:23.721Z","to":"2022-08-30T15:38:28.171Z"},"kuery":"kibana.alert.status: \\"recovered\\" and kibana.alert.duration.us >= 120"} 1`] = `
Object {
  "bool": Object {
    "filter": Array [
      Object {
        "bool": Object {
          "filter": Array [
            Object {
              "bool": Object {
                "minimum_should_match": 1,
                "should": Array [
                  Object {
                    "match_phrase": Object {
                      "kibana.alert.status": "recovered",
                    },
                  },
                ],
              },
            },
            Object {
              "bool": Object {
                "minimum_should_match": 1,
                "should": Array [
                  Object {
                    "range": Object {
                      "kibana.alert.duration.us": Object {
                        "gte": "120",
                      },
                    },
                  },
                ],
              },
            },
          ],
        },
      },
      Object {
        "range": Object {
          "kibana.alert.time_range": Object {
            "format": "strict_date_optional_time",
            "gte": "2022-08-30T15:23:23.721Z",
            "lte": "2022-08-30T15:38:28.171Z",
          },
        },
      },
    ],
    "must": Array [],
    "must_not": Array [],
    "should": Array [],
  },
}
`;

exports[`buildEsQuery should generate correct es query for {"timeRange":{"from":"2022-08-30T15:23:23.721Z","to":"2022-08-30T15:38:28.171Z"},"kuery":"nestedField: { child: \\"something\\" }"} 1`] = `
Object {
  "bool": Object {
    "filter": Array [
      Object {
        "nested": Object {
          "path": "nestedField",
          "query": Object {
            "bool": Object {
              "minimum_should_match": 1,
              "should": Array [
                Object {
                  "match_phrase": Object {
                    "nestedField.child": "something",
                  },
                },
              ],
            },
          },
          "score_mode": "none",
        },
      },
      Object {
        "range": Object {
          "kibana.alert.time_range": Object {
            "format": "strict_date_optional_time",
            "gte": "2022-08-30T15:23:23.721Z",
            "lte": "2022-08-30T15:38:28.171Z",
          },
        },
      },
    ],
    "must": Array [],
    "must_not": Array [],
    "should": Array [],
  },
}
`;

exports[`buildEsQuery should generate correct es query for {"timeRange":{"from":"2022-08-30T15:23:23.721Z","to":"2022-08-30T15:38:28.171Z"}} 1`] = `
Object {
  "bool": Object {
    "filter": Array [
      Object {
        "range": Object {
          "kibana.alert.time_range": Object {
            "format": "strict_date_optional_time",
            "gte": "2022-08-30T15:23:23.721Z",
            "lte": "2022-08-30T15:38:28.171Z",
          },
        },
      },
    ],
    "must": Array [],
    "must_not": Array [],
    "should": Array [],
  },
}
`;
